# binutils-rs

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  TODO.md  build.rs  r2lo_A-mep.c  r2lo_d-mep.c
.cargo/: config
examples/: test_binary.rs  test_buffer.rs
radare2/: Makefile  lo_utils-mep.c  lo_utils-mep.h  r2lo_A-mep.c  r2lo_d-mep.c
resources/: NOTES.md  README.md
resources/docs/: ToothyWiki_ Binutils_Bfd.html  ToothyWiki_ Binutils_Libopcodes.html
resources/docs/ToothyWiki_ Binutils_Libopcodes_files/: rot13.js
resources/examples/: Makefile  test_binary.c
resources/examples/src/: test_binary.c  test_buffer_mep.c  test_buffer_x86_64.c
rust/binutils/: Cargo.toml  NOTES.md  TODO  TODO.md  build.rs
rust/binutils/src/: bfd.rs  instruction.rs  lib.rs  mach.rs  main.rs  opcodes.rs  section.rs  utils.c
rust/test_binary/: Cargo.toml  NOTES.md
rust/test_binary/src/: main.rs  utils.c
src/: bfd.rs  helpers.c  helpers.rs  instruction.rs  lib.rs  mach.rs  main.rs  opcodes.rs  section.rs  utils.c  utils.rs
tests/: disassemble_buffers.rs
