[package]
name = "binutils"
version = "0.1.0"
build = "build.rs"
authors = ["Guillaume Valadon <guillaume@valadon.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/guedou/binutils-rs/"
description = "A library that ease interacting with the binutils disassembly engine"
keywords = ["disassemble"]
exclude = ["resources/*"]

[dependencies]
libc = "0.2.40"

[build-dependencies]
cc = "1.0"
